--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
+    "seed": "node seeder.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
